#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddldata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-07
2012-07-24 Andy Salnikov
- acqiris.ddl.xml: bug fix in Timestamp::value() method

Tag: V00-03-06
2012-07-06 Andy Salnikov
- new package quartz with single class ConfigV1 similar to opal1k.ConfigV1
- pnccd.FrameV1 is now contained in pnccd.FramesV1
- new class (not in XTC/pdsdata) pnccd.FullFrameV1 containing 1024x1024 image

Tag: V00-03-05
2012-06-26 Andy Salnikov
- Encoder.DataV[12]: added value() method, like in pdsdata classes
  but implemented slightly differently
  
Tag: V00-03-04
2012-06-22 Andy Salnikov
- EvrData.EventCodeV5: one member method was incorrectly named 
  (isTerminator instead of isCommand)
  
Tag: V00-03-03
2012-06-03 Andy Salnikov
- upgrade to pdsdata V03-07-07
- cspad adds new type ConfigV4

Tag: V00-03-02
2012-05-11 Andy Salnikov
- upgrade to pdsdata V03-07-00
- evr adds new type ConfigV6

Tag: V00-03-01
2012-05-03 Andy Salnikov
- upgrade to pdsdata V03-06-00
- new packages fli.ddl.xml, oceanoptics.ddl.xml
- princeton adds new type ConfigV3

Tag: V00-03-00
2012-05-02 Andy Salnikov
- all config types now have "config-type" tag
- evr.ddl.xml: one field is split into bitfields, neded to generate 
  constructor for HDF5 data  

Tag: V00-02-04
2012-05-01 Andy Salnikov
- new class epics.ConfigV1

Tag: V00-02-03
2012-03-27 Andy Salnikov
- upgrade to pdsdata V03-04-01
- new class bld.BldDataEBeamV3

Tag: V00-02-02
2012-03-14 Andy Salnikov
- upgrade to pdsdata V03-03-01A
  - new class timepix.ConfigV2

Tag: V00-02-01
2012-02-17 Andy Salnikov
- upgrade to pdsdata V03-02-12
  - new class timepix.DataV2
- added diodeGain(int) method (does not exist in pdsdata)